--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text&family=Manrope&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Manrope&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Host+Grotesk:ital,wght@0,300..800;1,300..800&display=swap');
 @font-face {
   font-family: Google Sans Text;
   src: url('font/GoogleSansText-Regular.ttf');
@@ -17,8 +18,15 @@
 body {
   font-family: 'Google Sans Text', sans-serif;
 }
+.geist-mono {
+  font-family: "Geist Mono", monospace;
+  font-optical-sizing: auto;
+}
 .manrope {
   font-family: 'Manrope', sans-serif !important;
+}
+.google-sans-text {
+  font-family: 'Google Sans Text', sans-serif;
 }
 .fira-code {
   font-family: 'Fira Code', Monospace !important;
@@ -35,9 +43,6 @@ h3 {
   text-align: center;
 }
 h5 {
-  text-align: center;
-}
-p {
   text-align: center;
 }
 hr {
@@ -61,7 +66,7 @@ img {
 /* Functional Features added */
 .link-none {
   text-decoration: none !important;
-  color: black !important;
+  color: black ;
 }
 #share {
 	 transition: background-color 1s, color 1s;
@@ -88,6 +93,17 @@ img {
 .card-img-top {
   background: white;
 }
+.badge {
+  width: 20px; /* Sesuaikan ukuran lingkaran */
+  height: 20px; /* Sesuaikan ukuran lingkaran */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px; /* Sesuaikan ukuran teks */
+  font-weight: bold;
+  color: white;
+}
+
 hr {
   opacity: 0;
 }
