--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text&family=Manrope&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Manrope&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Host+Grotesk:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amiri+Quran&display=swap');
+
 @font-face {
   font-family: Google Sans Text;
   src: url('font/GoogleSansText-Regular.ttf');
+}
+@font-face {
+  font-family: Google Sans Mono;
+  src: url('font/GoogleSansMono-Regular.ttf');
 }
 @font-face {
   font-family: Google Sans;
@@ -135,6 +141,16 @@ position: fixed;
 bottom: 20px;
 right: 20px;
 display: none;
+}
+#surah-arab {
+  font-family: 'Amiri Quran', serif;
+  font-size: 30px;
+  font-weight: bold;
+}
+#surah-translation {
+  font-family: 'Amiri Quran', serif;
+  font-size: 30px;
+  font-weight: bold;
 }
 footer {
   margin-top: 600px;
