--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -6,7 +6,7 @@
 body {
   background-color: #F1F0F4 !important;
   color: #222;
-  transition: background-color 0.5s;
+  transition: background 0.5s, color 0.5s ease;
 }
 
 .bg-light {
@@ -14,13 +14,19 @@ body {
   transition: background 0.5s;
 }
 
-[data-theme="dark"] {
+[data-theme="dark"] body {
   background-color: #0E1419 !important;
   color: #eee;
-  transition: background-color 0.5s;
 }
 
+html {
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
 
+/* Transisi warna hanya saat tombol ditekan */
+.theme-transition {
+  transition: background-color 0.5s ease, color 0.5s ease;
+}
 
 [data-theme="dark"] .navbar-nav .nav-link::after {
   background-color: #ffffff; /* Garis bawah biru */
